fix positioning of popup comment for change log
was invisible on long reports, had to scroll down to see

--- a/src/moin/static/css/common.css
+++ b/src/moin/static/css/common.css
@@ -525,7 +525,7 @@ a.moin-auth-failed { color: red; color: var(--alert); }
 p.moin-selected-groups { font-size: 1.25em; font-weight: bold; }
 li.moin-selected-groups { font-size: 1em; font-weight: bold; }
 
-#popup { padding: 0; width: 80%; position: absolute; top: 10%; left: 10%; display: none; z-index: 10;
+#popup { padding: 0; width: 80%; position: absolute; top: 10em; left: 10%; display: none; z-index: 10;
     border: 3px solid #00417f; border: 3px solid var(--border-popup); }
 .popup-header { background: #00417f; background: var(--bg-popup-header); color: #fff; color: var(--inverse);
     font-size: 1.25em; padding: 10px; margin: 0; font-weight: bold; }
